--- a/app/Templates/register.html
+++ b/app/Templates/register.html
@@ -1,10 +1,24 @@
-{% extends "main2.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 
 <h1>Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
+        <p>
+            {{ form.first.label }}<br>
+            {{ form.first(size=32) }}<br>
+            {% for error in form.first.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.last.label }}<br>
+            {{ form.last(size=32) }}<br>
+            {% for error in form.last.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
         <p>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
